# saveandforget

./: .gitignore  Cargo.toml  README.md
migrations/2020-06-07-090829_create_documents/: up.sql
migrations/2020-06-10-161711_create_users/: up.sql
migrations/2020-06-11-090829_create_documents/: down.sql  up.sql
sql/: add_document.sql  schema.sql
src/: db.rs  db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/core/: mod.rs
src/db/: mod.rs
src/messenger/: mod.rs
src/models/: document.rs  mod.rs  user.rs  web.rs
src/utils/: jwt.rs
src/web_handlers/: documents.rs  facebook.rs  mod.rs  users.rs
