[package]
name = "saveandforget"
version = "0.1.0"
authors = ["Vincent Jousse <vincent@jousse.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
