[package]
name = "saveandforget"
version = "0.1.0"
authors = ["Vincent Jousse <vincent@jousse.org>"]
edition = "2018"
default-run = "saveandforget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-identity = "0.2.1"
anyhow = "1.0"
bcrypt = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10.1"
csrf-token = { git = "ssh://git@github.com/rich-murphey/csrf-token.git", branch="develop" }
derive_more = "0.99.5"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
json = "*"
jsonwebtoken = "7"
log = { version = "0.4", features = ["std", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
